force-app/main/default/objects/Opportunity/fields/Product_Interest_Countries__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest_Countries__c</fullName>
    <description>Field is used to indicate the countries the customer intends to pay International Employees.</description>
    <inlineHelpText>Field is used to indicate the countries the customer intends to pay International Employees.</inlineHelpText>
    <label>Product Interest Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Name</valueSetName>
    </valueSet>
</CustomField>