force-app/main/default/objects/Opportunity/fields/Ran_Payroll_Date__c.field-meta.xml
<CustomField>
    <fullName>Ran_Payroll_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ran Payroll Date</label>
    <type>DateTime</type>
</CustomField>