force-app/main/default/objects/Opportunity/fields/Random_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Random_Cohort__c</fullName>
    <description>Random Integer generated on Lead used for AB testing. This field gets its value upon Lead Conversion</description>
    <label>Random Cohort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>