force-app/main/default/objects/Opportunity/fields/Receiving_Education_End__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Education_End__c</fullName>
    <description>renewal_application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Receiving Education End</label>
    <type>DateTime</type>
</CustomField>