force-app/main/default/objects/Opportunity/fields/Receiving_Medical_Education_End__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Medical_Education_End__c</fullName>
    <description>new_plans_application</description>
    <label>Receiving Medical Education End</label>
    <type>DateTime</type>
</CustomField>