force-app/main/default/objects/Opportunity/fields/Receiving_Medical_Education_Start__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Medical_Education_Start__c</fullName>
    <description>new_plans_application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Receiving Medical Education Start</label>
    <type>DateTime</type>
</CustomField>