force-app/main/default/objects/Opportunity/fields/Recommended_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Benefits__c</fullName>
    <description>Recommended benefits (401K, HI, WC) during Onboarding - Populated from Panda/Kafka - CompanyOnboardingPackageRecommendations</description>
    <label>Recommended Benefits</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>