force-app/main/default/objects/Opportunity/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <description>Identifies referral type of an opportunity.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>