force-app/main/default/objects/Opportunity/fields/Referred_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_ID__c</fullName>
    <formula>Referred_By__r.Account_ID_18_Digit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred By ID</label>
    <type>Text</type>
</CustomField>