force-app/main/default/objects/Opportunity/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <inlineHelpText>Coverage start date for the new policies.</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>