force-app/main/default/objects/Opportunity/fields/Reviewing_Summary_End__c.field-meta.xml
<CustomField>
    <fullName>Reviewing_Summary_End__c</fullName>
    <description>new_plans_application
renewal_application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reviewing Summary End</label>
    <type>DateTime</type>
</CustomField>