force-app/main/default/objects/Opportunity/fields/Reviewing_Summary_Start__c.field-meta.xml
<CustomField>
    <fullName>Reviewing_Summary_Start__c</fullName>
    <description>new_plans_application
renewal_application</description>
    <label>Reviewing Summary Start</label>
    <type>DateTime</type>
</CustomField>