force-app/main/default/objects/Opportunity/fields/ROE_Exception__c.field-meta.xml
<CustomField>
    <fullName>ROE_Exception__c</fullName>
    <label>ROE Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>