force-app/main/default/objects/Opportunity/fields/ROE_Exception_Date__c.field-meta.xml
<CustomField>
    <fullName>ROE_Exception_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ROE Exception Date</label>
    <type>DateTime</type>
</CustomField>