force-app/main/default/objects/Opportunity/fields/Routing_Details__c.field-meta.xml
<CustomField>
    <fullName>Routing_Details__c</fullName>
    <label>Routing Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>