force-app/main/default/objects/Opportunity/fields/Selecting_Base_Plan_End__c.field-meta.xml
<CustomField>
    <fullName>Selecting_Base_Plan_End__c</fullName>
    <description>new_plans_application</description>
    <label>Selecting Base Plan End</label>
    <type>DateTime</type>
</CustomField>