force-app/main/default/objects/Opportunity/fields/Selecting_Base_Plan_Start__c.field-meta.xml
<CustomField>
    <fullName>Selecting_Base_Plan_Start__c</fullName>
    <description>new_plans_application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Selecting Base Plan Start</label>
    <type>DateTime</type>
</CustomField>