force-app/main/default/objects/Opportunity/fields/Selecting_Benefits_Started_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Selecting_Benefits_Started_Timestamp__c</fullName>
    <label>Selecting Benefits (Started) Timestamp</label>
    <type>DateTime</type>
</CustomField>