force-app/main/default/objects/Opportunity/fields/Selecting_Employee_Eligibility_End__c.field-meta.xml
<CustomField>
    <fullName>Selecting_Employee_Eligibility_End__c</fullName>
    <description>new_plans_application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Selecting Employee Eligibility End</label>
    <type>DateTime</type>
</CustomField>