force-app/main/default/objects/Opportunity/fields/Selecting_Employee_Eligibility_Start__c.field-meta.xml
<CustomField>
    <fullName>Selecting_Employee_Eligibility_Start__c</fullName>
    <description>new_plans_application</description>
    <label>Selecting Employee Eligibility Start</label>
    <type>DateTime</type>
</CustomField>