force-app/main/default/objects/Opportunity/fields/Selecting_Enrollment_Periods_End__c.field-meta.xml
<CustomField>
    <fullName>Selecting_Enrollment_Periods_End__c</fullName>
    <description>Source: Hippo Benefit New Plans Application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Selecting Enrollment Periods End</label>
    <type>DateTime</type>
</CustomField>