force-app/main/default/objects/Opportunity/fields/Selecting_Non_Medical_Plans_End__c.field-meta.xml
<CustomField>
    <fullName>Selecting_Non_Medical_Plans_End__c</fullName>
    <description>new_plans_application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Selecting Non Medical Plans End</label>
    <type>DateTime</type>
</CustomField>