force-app/main/default/objects/Opportunity/fields/Selecting_Offerings_Start__c.field-meta.xml
<CustomField>
    <fullName>Selecting_Offerings_Start__c</fullName>
    <description>renewal_application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Selecting Offerings Start</label>
    <type>DateTime</type>
</CustomField>