force-app/main/default/objects/Opportunity/fields/Send_Order_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Send_Order_TimeStamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Send Order TimeStamp</label>
    <type>DateTime</type>
</CustomField>