force-app/main/default/objects/Opportunity/fields/Sent_to_Gusto_User__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Gusto_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HI Lead Pass</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Send_Opportunity_To_Gusto</relationshipName>
    <type>Lookup</type>
</CustomField>