force-app/main/default/objects/Opportunity/fields/Sent_to_Migrations__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Migrations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to Migrations</label>
    <type>Checkbox</type>
</CustomField>