force-app/main/default/objects/Opportunity/fields/SGHI_LGHI__c.field-meta.xml
<CustomField>
    <fullName>SGHI_LGHI__c</fullName>
    <description>Used to indicate whether a group is small group health insurance or large group health insurance</description>
    <label>SGHI/LGHI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SGHI</fullName>
            </value>
            <value>
                <fullName>LGHI</fullName>
            </value>
            <value>
                <fullName>SGHI - Grandfathered</fullName>
            </value>
            <value>
                <fullName>LGHI - Grandfathered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>