force-app/main/default/objects/Opportunity/fields/Sign_All_Forms_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Sign_All_Forms_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sign All Forms Completed Date</label>
    <type>DateTime</type>
</CustomField>