force-app/main/default/objects/Opportunity/fields/Signing_Forms_Completed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Signing_Forms_Completed_Timestamp__c</fullName>
    <description>The Date signing forms was completed
https://github.com/Gusto/hawaiian-ice/blob/development/app/services/salesforce/bor/opportunity.rb</description>
    <label>Signing Forms (Completed) Timestamp</label>
    <type>DateTime</type>
</CustomField>