force-app/main/default/objects/Opportunity/fields/Slack_Notification_Posted__c.field-meta.xml
<CustomField>
    <fullName>Slack_Notification_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if slack notification is posted based on new router.</description>
    <label>Slack Notification Posted</label>
    <type>Checkbox</type>
</CustomField>