force-app/main/default/objects/Opportunity/fields/SMB_Approval_Detail__c.field-meta.xml
<CustomField>
    <fullName>SMB_Approval_Detail__c</fullName>
    <inlineHelpText>Please include links to related Accounts and any other detail for approval</inlineHelpText>
    <label>SMB Approval Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>