force-app/main/default/objects/Opportunity/fields/Sold_By__c.field-meta.xml
<CustomField>
    <fullName>Sold_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Reseller</value>
        </filterItems>
        <infoMessage>Displaying Partner Accounts</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Sold By)</relationshipLabel>
    <relationshipName>Opportunities_As_Reseller</relationshipName>
    <type>Lookup</type>
</CustomField>