force-app/main/default/objects/Opportunity/fields/SoldBy_Accountant_Lead__c.field-meta.xml
<CustomField>
    <fullName>SoldBy_Accountant_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for instances where the company is in Salesforce, but the Reseller is still a lead. This field will be stamped with the Accountant Lead record.  Updated by ZPCompanyTriggerHelper</description>
    <label>Sold By Accountant Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Opportunities (SoldBy Accountant Lead)</relationshipLabel>
    <relationshipName>SoldBy_Accountant_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>