force-app/main/default/objects/Opportunity/fields/Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_ID__c</fullName>
    <externalId>true</externalId>
    <label>Source ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>