force-app/main/default/objects/Opportunity/fields/Stage_Detail_2__c.field-meta.xml
<CustomField>
    <fullName>Stage_Detail_2__c</fullName>
    <label>Stage Detail 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage_Detail__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>$100 fee</fullName>
            </value>
            <value>
                <fullName>$6/PEPM</fullName>
            </value>
            <value>
                <fullName>1099 Invoicing</fullName>
            </value>
            <value>
                <fullName>1-3 Employees (W2)</fullName>
            </value>
            <value>
                <fullName>1-9 verification (remote)</fullName>
            </value>
            <value>
                <fullName>1-Day or Same Day Payments</fullName>
            </value>
            <value>
                <fullName>2-Day Program Frustration</fullName>
            </value>
            <value>
                <fullName>401k contribution schemes</fullName>
            </value>
            <value>
                <fullName>90 day window too long</fullName>
            </value>
            <value>
                <fullName>Abandon</fullName>
            </value>
            <value>
                <fullName>ACA filings</fullName>
            </value>
            <value>
                <fullName>Access Health CT (Exchange)</fullName>
            </value>
            <value>
                <fullName>Accidental Employee Signup</fullName>
            </value>
            <value>
                <fullName>Accidentally created account from integrations partner</fullName>
            </value>
            <value>
                <fullName>Accountant/Tax Preparer already calc&apos;ed</fullName>
            </value>
            <value>
                <fullName>Accountant&apos;s experience</fullName>
            </value>
            <value>
                <fullName>Accountant acting as gatekeeper</fullName>
            </value>
            <value>
                <fullName>Accountant brokers company plan</fullName>
            </value>
            <value>
                <fullName>Accountant doesn&apos;t believe they qualify</fullName>
            </value>
            <value>
                <fullName>Accountant doesn&apos;t trust our numbers</fullName>
            </value>
            <value>
                <fullName>Accountant won&apos;t use any R&amp;D firm</fullName>
            </value>
            <value>
                <fullName>Accountant’s experience</fullName>
                <isActive>false</isActive>
                <label>Accountant’s experience</label>
            </value>
            <value>
                <fullName>ACH Form</fullName>
            </value>
            <value>
                <fullName>Add Addresses</fullName>
            </value>
            <value>
                <fullName>Add Employees</fullName>
            </value>
            <value>
                <fullName>Agricultural Payroll</fullName>
            </value>
            <value>
                <fullName>Align PTO with FY or Custom Date</fullName>
            </value>
            <value>
                <fullName>Allways Health Partners</fullName>
            </value>
            <value>
                <fullName>Already claimed credits (and we aren&apos;t allowing further maximization)</fullName>
            </value>
            <value>
                <fullName>Already claimed credits (and we aren’t allowing further maximization)</fullName>
                <isActive>false</isActive>
                <label>Already claimed credits (and we aren’t allowing further maximization)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>