force-app/main/default/objects/Opportunity/fields/Stage_Detail__c.field-meta.xml
<CustomField>
    <fullName>Stage_Detail__c</fullName>
    <label>Stage Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>[Benefits] BoR&apos;ed Away - At Renewal</fullName>
            </value>
            <value>
                <fullName>[Benefits] BoR&apos;ed Away - Before Renewal Cycle</fullName>
            </value>
            <value>
                <fullName>[Benefits] Canceling HI Coverage</fullName>
            </value>
            <value>
                <fullName>[Benefits] Carrier Won&apos;t Allow Change</fullName>
            </value>
            <value>
                <fullName>[Benefits] Chose Competitor</fullName>
            </value>
            <value>
                <fullName>[Benefits] Employees Not Eligible</fullName>
            </value>
            <value>
                <fullName>[Benefits] Not eligible</fullName>
            </value>
            <value>
                <fullName>[Benefits] Post-Signature Cancel - Customer Cancel</fullName>
            </value>
            <value>
                <fullName>[Benefits] Route to NP</fullName>
            </value>
            <value>
                <fullName>[Benefits] Switching to PEO</fullName>
            </value>
            <value>
                <fullName>[Logistics] Disruption to Workforce</fullName>
            </value>
            <value>
                <fullName>[Logistics] Not offering medical (cost)</fullName>
            </value>
            <value>
                <fullName>[Logistics] Not offering medical (participation)</fullName>
            </value>
            <value>
                <fullName>[Logistics] RFI Complication</fullName>
            </value>
            <value>
                <fullName>[Logistics] Special Enrollment Period Expired</fullName>
            </value>
            <value>
                <fullName>[Logistics] Too Expensive</fullName>
            </value>
            <value>
                <fullName>[Logistics] Too Labor-Intensive</fullName>
            </value>
            <value>
                <fullName>[Logistics] Unsupported: Not/No Longer Gusto Payroll Customer</fullName>
            </value>
            <value>
                <fullName>[Logistics] Upcoming/Active Renewal</fullName>
            </value>
            <value>
                <fullName>[Logistics] Workers Comp Unsupported</fullName>
            </value>
            <value>
                <fullName>[Other] Duplicate Opportunity</fullName>
            </value>
            <value>
                <fullName>[Other] Migrations Capacity</fullName>
            </value>
            <value>
                <fullName>[Other] Non Product</fullName>
            </value>
            <value>
                <fullName>[Other] Other</fullName>
            </value>
            <value>
                <fullName>[Other] Renewal Aligned</fullName>
            </value>
            <value>
                <fullName>[Partner] Partner Incentives</fullName>
            </value>
            <value>
                <fullName>[Payroll] Blocked by Benefits Oppty</fullName>
            </value>
            <value>
                <fullName>[Product] 401(k) Functionality</fullName>
            </value>
            <value>
                <fullName>[Product] ACH Window</fullName>
            </value>
            <value>
                <fullName>[Product] Agricultural Employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>