force-app/main/default/objects/Opportunity/fields/Stage_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The timestamp of when the stage was entered.</description>
    <label>Stage Entered</label>
    <type>DateTime</type>
</CustomField>