force-app/main/default/objects/Opportunity/fields/State_Setup_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>State_Setup_Completed_Date__c</fullName>
    <label>State Setup Completed Date</label>
    <type>DateTime</type>
</CustomField>